lnrpc: ability to spend unconfirmed coins
